# qianji

./: .coverage  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  SKILL.md  install-chrome.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: openapi.json
qianji/: __init__.py  cli.py  cli_direct.py  mcp.py  mcp_config.py  mcp_setup.py  mcp_wrapper.py  server.py
qianji/core/: __init__.py  browser_manager.py  browser_registry.py  pw_client.py  tab_manager.py
qianji/models/: __init__.py  config.py  responses.py  snapshot.py
qianji/routes/: __init__.py  agent_act.py  agent_debug.py  agent_dialog.py  agent_snapshot.py  agent_storage.py  basic.py  tabs.py
qianji/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: iframe_content.html  v3_test.html
tests/integration/: __init__.py  test_api.py  test_v3.py
tests/unit/: __init__.py  test_browser_manager.py  test_cli.py  test_config.py
