[project]
name = "qianji"
version = "2.0.0"
description = "Universal Browser Automation for AI - 100% OpenClaw Compatible"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "qianji", email = "qianji@example.com"}
]
keywords = ["browser", "automation", "ai", "playwright", "mcp", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
qianji = "qianji.cli:sync_main"
qianji-server = "qianji.server:main"
qianji-mcp = "qianji.mcp:sync_main"
qianji-setup-mcp = "qianji.mcp_setup:sync_main"
qianji-mcp-config = "qianji.mcp_config:main"

[project.urls]
Homepage = "https://github.com/hexian2001/qianji"
Documentation = "https://github.com/hexian2001/qianji#readme"
Issues = "https://github.com/hexian2001/qianji/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qianji"]

# Black - Code formatting
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# Ruff - Linting and import sorting
[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501",  # Line too long (handled by Black)
    "B008",  # Do not perform function calls in argument defaults
    "B904",  # raise ... from err (will fix later)
    "UP035",  # typing.Dict deprecation (will fix later)
    "UP006",  # Use dict instead of Dict (will fix later)
    "UP007",  # Use | instead of Union (will fix later)
    "C901",  # Function is too complex
    "E722",  # Do not use bare except (will fix later)
    "E402",  # Module level import not at top of file
    "F841",  # Local variable is assigned to but never used
    "C401",  # Unnecessary generator (rewrite as set comprehension)
    "C408",  # Unnecessary dict call (rewrite as literal)
    "C416",  # Unnecessary list comprehension (rewrite using list())
    "SIM102",  # Use a single if statement instead of nested if
    "SIM108",  # Use ternary operator instead of if-else block
    "SIM114",  # Combine if branches using logical or operator
    "SIM118",  # Use key in dict instead of key in dict.keys()
    "SIM105",  # Use contextlib.suppress instead of try-except-pass
    "B007",  # Loop control variable not used within loop body
    "W293",  # Blank line contains whitespace
    "SIM101",  # Multiple isinstance calls for single value
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"tests/**/*" = ["S"]  # Ignore security checks in tests

[tool.ruff.lint.isort]
known-first-party = ["qianji"]

# MyPy - Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=qianji --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# Coverage
[tool.coverage.run]
source = ["qianji"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "qianji/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
